--- a/client/src/app/components/layout/room/puzzle-rush-room/puzzle-rush-room.component.scss
+++ b/client/src/app/components/layout/room/puzzle-rush-room/puzzle-rush-room.component.scss
@@ -61,6 +61,11 @@
     --color2: rgba(0, 0, 0, 1);
 }
 
+.root.solo-finish {
+    --color1: rgba(182, 4, 4, 0.5);    
+    --color2: rgba(0, 0, 0, 1);
+}
+
 app-xp-status {
     position: absolute;
     top: 0;
