activity puzzle rush

--- a/client/src/app/components/modals/profile-modal/profile-modal.component.html
+++ b/client/src/app/components/modals/profile-modal/profile-modal.component.html
@@ -154,6 +154,12 @@
                         <p>in puzzles</p>
                     </ng-container>
 
+                    <ng-container *ngIf="activity.type === ActivityType.RUSH_RECORD">
+                        <p>Scored a new record of</p>
+                        <p class="highlight purple">{{activity.score}}</p>
+                        <p>in Puzzle Blitz</p>
+                    </ng-container>
+
                 </div>
             </div>
         </ng-container>
