--- a/client/src/app/components/layout/room/puzzle-rush-room/puzzle-rush-room.component.scss
+++ b/client/src/app/components/layout/room/puzzle-rush-room/puzzle-rush-room.component.scss
@@ -355,6 +355,10 @@ h1.header.red {
     align-items: center;
 }
 
+.battle .attempts-remaining {
+    gap: 5px;
+}
+
 h1.score {
     font-family: $main-font;
     font-size: 35px;
