--- a/client/src/app/components/ui/tab-selector/tab-selector.component.html
+++ b/client/src/app/components/ui/tab-selector/tab-selector.component.html
@@ -1,12 +1,14 @@
 
-<div *ngIf="!linkedToRouter" class="tab-selector" [class.small]="small">
+<div *ngIf="!linkedToRouter" class="tab-selector" [class.small]="small" [ngClass]="{'icons' : tabIcons}">
   <div *ngFor="let tab of tabs" class="tab" [class.small]="small" [ngClass]="(selectedTab === tab) ? 'selected' : ''" (click)="selectTab(tab)">
-      <p class="tab-label" [class.small]="small">{{tabStrings ? tabStrings[tab] : tab}}</p>
+    <img *ngIf="tabIcons" [src]="tabIcons[tab]" height="80px" width="100px">
+    <p class="tab-label" [class.small]="small">{{tabStrings ? tabStrings[tab] : tab}}</p>
   </div>
 </div>
 
-<div *ngIf="linkedToRouter" class="tab-selector" [class.small]="small">
+<div *ngIf="linkedToRouter" class="tab-selector" [class.small]="small" [ngClass]="{'icons' : tabIcons}">
   <a *ngFor="let tab of tabs" [class.small]="small" [routerLink]="tabToURL[tab]" class="tab" routerLinkActive="selected">
+      <img *ngIf="tabIcons" [src]="tabIcons[tab]" height="80px" width="100px">
       <p class="tab-label" [class.small]="small">{{tabStrings ? tabStrings[tab] : tab}}</p>
   </a>
 </div>
