--- a/client/src/app/components/alerts/trophy-alert/trophy-alert.component.scss
+++ b/client/src/app/components/alerts/trophy-alert/trophy-alert.component.scss
@@ -18,6 +18,10 @@
     border: 2px solid #FFAF2C;
 }
 
+.trophy-alert.puzzle_battle {
+  gap: 10px;
+}
+
 
 .delta.positive {
     transform: translateY(20px); 
