--- a/client/src/app/components/ui/trophies/trophies.component.html
+++ b/client/src/app/components/ui/trophies/trophies.component.html
@@ -1,4 +1,4 @@
-<div class="container" [ngClass]="{reverse}" [ngStyle]="{'gap' : (size * 0.15 * scaleGap)+'px'}">
+<div class="container" [ngClass]="{reverse}" [ngStyle]="{'gap' : (size * 0.15 * scaleIcon)+'px'}">
     <svg class="trophies" [attr.width]="size * 21/24 * 0.75 * scaleIcon" [attr.height]="size * 0.75 * scaleIcon" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M2.5432 10.3389H1.27148V11.6106H2.5432V10.3389Z" [attr.fill]="color ?? 'url(#paint0_linear_2037_416)'"/>
         <path d="M1.27172 5.25293H0V10.3398H1.27172V5.25293Z" [attr.fill]="color ?? 'url(#paint1_linear_2037_416)'"/>
